# MinecraftModManager

./: .autotools  .cproject  .gitignore  .project  CMakeLists.txt  Makefile.am  MinecraftModMan.conf  README.md  WxWizFrame.fbp  configure.ac  deleteme.txt  libtool  mbed_TLS_test.cpp  wxURL_DownloadTest.cpp  wxURL_test.cpp
XERCES_SRC_BACKUP/: MinecraftUpdater.cpp  MinecraftUpdater.h
bat/: check_java_arch.bat  win32_get_java_dir.bat
cmake/: FindMbedTLS.cmake
m4/: m4_ax_jni_include_dir.m4
multimc_java_launcher/: MultiMCLauncher.java
multimc_new_launcher/: Launcher.java  MCFrame.java  MultiMCLauncher.java
src/: CMakeLists.txt  Makefile.am  MinecraftModMan.conf  Minecraft_Mod_ManagerApp.cpp  Minecraft_Mod_ManagerApp.h  Minecraft_Mod_ManagerMain.cpp  Minecraft_Mod_ManagerMain.h
src/GUI/: CMakeLists.txt  GUIFrame.cpp  GUIFrame.h  GUIFrame_additional_setup.h  GUIFrame_events.cpp  Makefile.am  SupplementaryIncludes.h
src/GUI/.deps/: GUIFrame.Plo
src/launcher/: MCFrame.java  Makefile
src/tabs/: CMakeLists.txt  ClientInstanceTab.cpp  ClientInstanceTab.h  InstanceTab.cpp  InstanceTab.h  JarTab.cpp  JarTab.h  Makefile.am  MinecraftSessionManager.cpp  MinecraftSessionManager.h  MinecraftUpdater.cpp  MinecraftUpdater.h  MinecraftUtils.cpp  MinecraftUtils.h  ModTab.cpp  ModTab.h  ParentApp.cpp  ParentApp.h  ServerInstanceTab.cpp  ServerInstanceTab.h  SettingsTab.cpp  SettingsTab.h  Terminal.cpp  Terminal.h  types.h
src/tabs/.deps/: ClientInstanceTab.Plo  InstanceTab.Plo  JarTab.Plo  MinecraftSessionManager.Plo  MinecraftUpdater.Plo  MinecraftUtils.Plo  ModTab.Plo  ParentApp.Plo  ServerInstanceTab.Plo  SettingsTab.Plo  Terminal.Plo
xpm/: Minecraft_Creeper_Wallpaper_by_LynchMob10_09_1_.xpm  Minecraft_Creeper_Wallpaper_by_LynchMob10_09_1__2.xpm  Minecraft_Creeper_Wallpaper_by_LynchMob10_09_1__3.xpm  Minecraft_Creeper_Wallpaper_by_LynchMob10_09_1__4.xpm  Minecraft_Creeper_Wallpaper_by_LynchMob10_09_1__5.xpm
